--- a/ani.html
+++ b/ani.html
@@ -6,21 +6,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 4/Animation</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
+
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <header class="header">
         <nav>
 
+            <!--
             <a href="index.html#logo" class="logo">
 
             </a>
+-->
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -30,41 +55,115 @@
         </nav>
 
     </header>
-
-    <h1>Grundlæggende Animation</h1>
-
-
-    <section id="ani_2">
-        <div class="sectionwrapper">
-            <div class="col">
-                <a href="http://josefinececilie.dk/kea/04_animation/04_04_01_gruppe_4/index.html"><img src="billeder/ani_2.svg" alt="animation spil computer"></a> </div>
-            <div class="col">
-                <h2>Hvad må du dele?</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
-
-                <a href="http://josefinececilie.dk/kea/04_animation/04_04_01_gruppe_4/index.html">Prøv spil</a>
-                <a href="http://josefinececilie.dk/kea/04_animation/gruppe_4_dokumentationssite/">Dokumentationssite</a>
-
-            </div>
-        </div>
-    </section>
+    <br><br>
+    <h1>ANIMATION</h1>
+    <hr id="hr" class="hide"><br id="br1"><br id="br2">
 
     <section id="ani_1">
-        <div class="sectionwrapper">
-            <div class="col">
-                <a href="http://josefinececilie.dk/kea/04_animation/spil_v2/index.html"><img src="billeder/ani_1.svg" alt="animation spil computer"></a> </div>
-            <div class="col">
-                <h2>Trick or Treat game</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+        <img src="billeder/SVG/3.svg" alt="animation billede">
 
-                <a href="http://josefinececilie.dk/kea/04_animation/spil_v2/index.html">Prøv spil</a><br>
-                <a href="http://josefinececilie.dk/kea/04_animation/spil/assets/">Link til assetsliste</a>
+        <!--
+        <div class="wrap">
+            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
+        </div>
+-->
+        <div class="parallax_5">
+
+        </div>
+        <div class="col_top">
+            <h2>04.05.02 "Hvad må du dele?" spil</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+                <p>I temaets anden del, fik vi til opgave at lave endnu et spil, denne gang i gruppe.<br>
+                    Denne gang fik vi en case, hvor spillet vi i gruppen skulle udvikle, skulle være en del af en kampagne fra Sex og Samfund, med emnet Billeddeling.<br><br>
+                    Til forskel fra vores første spil, skulle vi denne gang brugerteste vores idé og illustrationer på målgruppen, så vi var sikre på, at få et produkt der ville hjælpe teenagere med, at forstå budskabet. Vi lavede derfor, et semistruktureret interview med en teenager, som hjalp os med, at få en større forståelse af, hvad der manglede eller hvad teenageren mente, ville være let at forstå og skabe et underholdende spil for andre i deres målgruppe. Interviewet af teenageren blev lavet i starten af processen, for at spore os ind på et designvalg, der kunne henvende sig til målgruppen, som var folkeskoleelever i alderen 13-15 år.</p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/04_04_01_gruppe_4/index.html">Prøv spil</a></div>
 
             </div>
+
+            <div class="text">
+
+                <p>Løbende blev vi introduceret for scrum begrebet, samt trello-boards og burn-down-charts, som kunne hjælpe os med, at nå vores mål, samt få et overblik over de mangler og problemer vi havde løbende i forløbet. Dette gav en struktureret tilgang til projektet, fra alles side.<br><br>
+                    I denne opgave, benyttede vi os igen af aktivitets - og statemachine diagrammer, hvilket hjalp os, med et mere struktureret overblik over vores kode til spillet. </p>
+            </div>
+            <div class="text">
+
+                <p> Vores spil har til formål at oplyse omkring billeder, der ikke må deles. Vi har derfor valgt, at bygge vores spil op som quiz, hvor man skal svare på, hvilke billeder der ville være passende, at dele online. Herudover, har vi valgt, at sætte både tid og point på spillet, så det blev mere ‘spil’ agtigt, og ikke bare var en quiz, så vi lettere ville holde målgruppens opmærksomhed og få dem til, at prøve spillet igen. <br><br>
+
+                    Vi valgte, at tage udgangspunkt i det minimalistiske flatdesign, da den skaber en overskuelig måde at oplyse og fremvise budskabet.<br>
+                    I vores farvevalg, har vi gjort brug af nedtonede og støvede farver, for at skabe en mere rolig atmosfære i spillet, dog med nogle stærke farver, for at skabe kontrast ved de ønskede motiver.
+                </p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/gruppe_4_dokumentationssite/">Se dokumentation</a></div>
+
+            </div>
+
         </div>
+
+
+        <div class="parallax_6">
+
+        </div>
+
+        <div class="col_top">
+            <h2>04.04.01 "Trick or Treat" spil</h2>
+            <hr>
+        </div>
+
+
+        <div class="col">
+            <div class="text">
+                <p>I temaet “Grundlæggende animation” skulle vi individuelt lave et spil fra bunden.<br>
+                    Vi skulle til start, selv komme på en idé og udfra vores idé skitsere de elementer og karakterer der skulle være en del af vores spil, samt skabe et moodboard for, at skabe et udgangspunkt og stilforståelse i vores elementer.<br>
+                    Efter at have været igennem forkellige idéer til stil på spillet, udvalgte jeg en specifik stil og gik igang med at tegne i Adobe Illustrator, hvor jeg anvendte vektorgrafik, for at sikre at grafikken skallerede korrekt på alle skærme uden at blive pixelerede. I spillet skulle der indgå karakterer, UI-elementer og en baggrund. Vi lærte i denne del om farvelærer og hvordan kontrast- og komplementær farver skaber dynamik i billedet. Til sidst skulle vi skabe et interaktivt og fungerende spil, hvor man kunne trykke på forskellige ‘gode’ og ‘dårlige’ elementer. </p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/spil_v2/index.html">Prøv spil</a><br></div>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/04_animation/spil/assets/">Se assetsliste</a></div>
+
+
+            </div>
+
+            <div class="text">
+
+                <p> Vi blev løbende undervist og præsenteret for javascript, som er et programmeringssprog der går ind og lytter på brugerens handlinger, og er med til at skabe et interaktivt site.<br>
+                    Herudover, blev vi introduceret til aktivitetsdiagrammer, statemachine diagrammer og hvordan vi kunne kode udfra disse diagrammer, så det gav et større og lettere overblik over, hvordan der blev skabt et godt userflow i spillet, samt hjælp til, hvordan spillet skulle programmeres. </p>
+                <div class="button"> <a href="04_03_04_Animation_%E2%80%8Bjosefine_cecilie_larsen.pdf">Se dokumentation</a></div>
+
+
+            </div>
+            <div class="text">
+
+                <img src="billeder/karakter.svg" alt="spil spøgelse">
+
+            </div>
+
+        </div>
+
     </section>
 
-    <script src=""></script>
+
+
+    <script src="script.js"></script>
+    <footer>
+        <div class="col">
+            <p>Josefine Cecilie Larsen
+                <br>Mail: josefinececilie90@gmail.com
+                <br> Kea-mail: jose4400@stud.kea.dk
+                <br>Tlf: 5377 2523
+            </p>
+        </div>
+
+        <div class="col">
+            <a href="https://josefinececilie.carbonmade.com/"><img src="billeder/1Logo.jpg" alt="josefine cecilie logo"> </a>
+            <a href="https://www.facebook.com/josefine.cecilie.77"> <img src="billeder/face.svg" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/josefinececilie/"> <img src="billeder/insta.svg" alt="instagram logo"></a>
+
+        </div>
+
+
+    </footer>
+
 </body>
+
 
 </html>
