--- a/content.html
+++ b/content.html
@@ -6,21 +6,44 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 4/Animation</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <header class="header">
         <nav>
 
+            <!--
             <a href="index.html#logo" class="logo">
 
             </a>
+-->
 
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -30,44 +53,98 @@
         </nav>
 
     </header>
+    <br><br>
+    <h1>INDHOLD</h1>
+    <hr id="hr" class="hide"><br id="br1"><br id="br2">
 
-    <h1>Grundlæggende Indhold</h1>
-    <section id="content_1">
-        <div class="sectionwrapper">
-            <div class="col">
-                <!--                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html"><img src="billeder/ind_1.svg" alt="animation spil computer"></a>-->
 
-                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/books.html#books"><img src="billeder/ind_2.svg" alt="computer iphone redesign">
-                </a>
+
+    <section id="content">
+        <img src="billeder/SVG/4.svg" alt="indholdsbillede">
+
+        <!--
+        <div class="wrap">
+            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
+        </div>
+-->
+        <div class="parallax_7">
+
+        </div>
+
+        <div class="col_top">
+            <h2>05.03.01 Redesign "NW Gallery"</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+                <p>Under temaet <i>Grundlæggende indhold</i> fik vi til opgave, at finde en virksomhed der kunne trænge til en opfriskning af deres site og sidens indhold. I denne opgave skulle vi skabe et nyt site, billedmateriale og videomateriale der passede til vores site, og viste den identitet vi ønskede at få frem hos virksomheden.<br><br>
+
+                    Under temaet blev vi introduceret til GitHub, som gjorde det muligt for alle i gruppen, at arbejde i samme brackets dokument, hvilket gjorde det mere simpelt, at samarbejde, samt alle få en grundforståelse for den kode vi udarbejdede.
+                </p>
+
+                <div class="button"> <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">NW gallery site</a></div>
 
             </div>
-            <div class="col">
-                <h2>Redesign af NW Gallery</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
+            <div class="text">
+                <p>Herudover, blev vi introduceret til flere testformer:<br><br>
+                    <b>BERT-test</b> (Bipolar emotional response testing). Som kort går ud på, at få subjektive holdninger fra brugeren om designet eller indholdet på sitet.<br><br>
+                    <b>5-sekunders test</b> Denne test går ud på, at få testpersonens førstehåndsindtryk af sitet, og om man opfatter siden formål og koncept, så snart man åbner den.<br><br>
+                    Og til sidst: <b>Heuristisk-test</b> Hvilket er en test, hvor man får en eksperts perspektiv. Eksperten vil her, gennemgå siden, og se det fra brugerens øje, for at finde frem til hvad der kunne være af mangler og krav, for at skabe et fuldendt brugervenlighed.
 
-                <a href="http://josefinececilie.dk/kea/05_03_01a_gruppe13/index.html">NW gallery</a>
-                <a href="http://josefinececilie.dk/kea/05_indhold/05_03_01_gruppe13/index.html">Dokumentationssite</a>
-
+                </p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/05_indhold/05_03_01_gruppe13/index.html">Se dokumentation</a></div>
             </div>
+            <div class="text">
+                <p>Vi valgte i vores gruppe, at redesigne <i>NW Gallery</i>, hvilket er et fotogalleri i Nansensgade. Hos NW Gallery har Nina Worren - ejeren af galleriet - særligt fokus på det kunstneriske og personlige fotografi. <br>
+                    Vi startede ud, med at have lave et kort interview med Nina Worren, for at få et billede af hvad virksomheden identitet var, og hvad hun havde af planer og tanker for sin virksomhed. Her gik det hurtigt op for os, at hun havde mange planer i mange forskellige retninger, og derfor var det svært, at have finde den klare identitet, hvilket derfor var vores hovedfokus i opgaven, at fremvise og klargøre for de brugere der ville bruge sitet. <br><br>
+                    Det gjorde vi, ved at lave en mere overskuelig og clean side - som vi desværre aldrig fik færdiggjort- vi holdt os de lyse farver og nuancer, her særligt et fokus på hvid og lysgrå, men med skrå linjer imellem hver del på sitet. Dette element inddrog vi, for at skabe en kontrast til, de eller lige linjer der kan være i fotografierne på væggen. <br>
+                    Ved vores indholdsmateriale, skabte vi en video, hvor vi viste hvad NW Gallery er og hvad der er stedets identitet. <br>
+                    Videoen viste galleriejeren Nina Worren og hendes sted. <br>
+                    Til redigering af videoen benyttede vi Adobe Premiere pro, og forskellige klippe- og filmteknikker vi havde lært igennem undervisningsforløbet.
 
+                </p>
+            </div>
+        </div>
 
+        <div class="parallax_8">
+
+        </div>
+        <div class="col_bottom">
+            <div class="video">
+
+                <video width="" poster="thumbnail.png" controls>
+                    <source src="nw_gallery_nina_worren.mp4" type="video/mp4">
+                </video>
+            </div>
         </div>
 
     </section>
 
-    <section id="content_2">
-        <div class="sectionwrapper">
-            <div class="col_bottom">
-                <video width="1000" poster="thumbnail.png" controls>
-                    <source src="Nina_Worren.mp4" type="video/mp4">
-                    <!--  <source src="mov_bbb.ogg" type="video/ogg">-->
-                </video></div>
+
+
+
+
+
+    <script src="script.js"></script>
+    <footer>
+        <div class="col">
+            <p>Josefine Cecilie Larsen
+                <br>Mail: josefinececilie90@gmail.com
+                <br> Kea-mail: jose4400@stud.kea.dk
+                <br>Tlf: 5377 2523
+            </p>
         </div>
-    </section>
+
+        <div class="col">
+            <a href="https://josefinececilie.carbonmade.com/"><img src="billeder/1Logo.jpg" alt="josefine cecilie logo"> </a>
+            <a href="https://www.facebook.com/josefine.cecilie.77"> <img src="billeder/face.svg" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/josefinececilie/"> <img src="billeder/insta.svg" alt="instagram logo"></a>
+
+        </div>
 
 
-
-    <script src=""></script>
+    </footer>
 </body>
+
 
 </html>
