--- a/index.html
+++ b/index.html
@@ -6,26 +6,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Josefine Cecilie Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
+
     <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
 
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 
 </head>
 
 <body>
     <header class="header">
         <nav>
-
-            <a href="index.html#logo" class="logo">
-
-            </a>
-
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -39,50 +53,40 @@
 
     <section id="splash">
         <div class="sectionwrapper">
-            <img src="billeder/Web%201920%20%E2%80%93%201.svg" alt="logo">
-            <div class="col_logo">
+            <img src="billeder/Web%201920%20%E2%80%93%201.png" alt="logo">
 
-            </div>
         </div>
     </section>
     <section id="scroll_front">
-        <div class="sectionwrapper">
-            <!--            <div class="col_shelf"></div>-->
-            <div class="scroll">
+        <div class="scroll">
 
-                <div class="book_web">
-                    <a href="web.html"><img src="billeder/SVG/1.svg" alt="grundlæggende web"></a>
-                </div>
-                <div class="book_ux">
-                    <a href="ux.html"><img src="billeder/SVG/2.svg" alt="grundlæggende ux"></a>
-                </div>
-                <div class="book_ani">
-                    <a href="ani.html"><img src="billeder/SVG/3.svg" alt="grundlæggende animation"></a>
-                </div>
-                <div class="book_indhold">
-                    <a href="content.html"><img src="billeder/SVG/4.svg" alt="grundlæggende indhold"></a>
-                </div>
-                <!--
-
-                <div class="book_ani">
-                    <a href="ani.html"><img src="billeder/SVG/ani_book.svg" alt="grundlæggende animation"></a>
-                </div>
-                <div class="book_indhold">
-                    <a href="content.html"><img src="billeder/SVG/indhold_book.svg" alt="grundlæggende indhold"></a>
-                </div>
-                <div class="book_cv">
-                    <a href="cv.html"><img src="billeder/SVG/cv_book.svg" alt="cv"></a>
-                </div>
--->
-
+            <div class="book_web">
+                <a href="web.html"><img src="billeder/SVG/1.svg" alt="grundlæggende web"></a>
             </div>
+            <div class="book_ux">
+                <a href="ux.html"><img src="billeder/SVG/2.svg" alt="grundlæggende ux"></a>
+            </div>
+            <div class="book_ani">
+                <a href="ani.html"><img src="billeder/SVG/3.svg" alt="grundlæggende animation"></a>
+            </div>
+            <div class="book_indhold">
+                <a href="content.html"><img src="billeder/SVG/4.svg" alt="grundlæggende indhold"></a>
+            </div>
+            <div class="book_cv">
+                <a href="cv.html"><img src="billeder/5.svg" alt="grundlæggende indhold"></a>
+            </div>
+
+
         </div>
+
     </section>
 
 
-    <script src=""></script>
+    <script src="script.js"></script>
 
 
 </body>
+
+
 
 </html>
