--- a/web.html
+++ b/web.html
@@ -6,21 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2/Web</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
+
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <header class="header">
         <nav>
-            <!--
-            <a href="index.html#logo" class="logo">
-            </a>
--->
-
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -30,63 +48,82 @@
         </nav>
 
     </header>
+    <br><br>
+    <h1>WEB</h1>
+    <hr id="hr" class="hide"><br id="br1"><br id="br2">
 
-    <h1>GRUNDLÆGGENDE WEB</h1>
     <section id="web_1">
+        <img src="billeder/SVG/1.svg" alt="web">
 
-
-        <div class="baggrund_1">
-            <div class="post_it">
-                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
-
-                <div class="text">
-                    <h2>02.04.02 Responsive site</h2>
-                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
-                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
-                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
-                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
-                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
-                </div>
-            </div>
+        <!--
+        <div class="wrap">
+            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
         </div>
-    </section>
-    <section id="web_2">
+-->
+        <div class="parallax">
 
-        <div class="baggrund_2">
-            <div class="post_it">
-                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
-
-                <div class="text">
-
-                    <h2>02.04.02 Responsive site</h2>
-                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
-                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
-                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
-                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
-                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
-                </div>
-            </div>
         </div>
-    </section>
-    <section id="web_3">
+        <div class="col_top">
+            <h2>02.04.02 Responsive site</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+                <p>Under web-temaet fik vi til opgave at skabe et website i en bestemt stilart, og introducerede os samtidig til vi kodesprogene HTML og CSS. Med opgaven blev vi introduceret til forskellige designmæssige stilarter og blev mere bekendt med, hvordan vi kunne arbejde med dem hver især.<br><br>
 
-        <div class="baggrund_3">
-            <div class="post_it">
-                <img src="billeder/SVG/Tegnebr%C3%A6t%2018.svg">
+                    Under dette tema valgte jeg, at arbejde med stilarten “American Magazine”. Som udgangspunkt udarbejdede jeg et mood-board, baseret på research om denne særegne stilart, der blev defineret i perioden ca. 1933-1965. Begyndelsesvis arbejdede jeg med sort/hvide monokrome farveskemaer, men ændrede det sidenhen til jordfarver og nuancer, og sammenstillede disse med lysere farver, såsom støvet gul samt lyserød, der tydeligt frembragte minder om den tid, som definerede “American Magazine” udtrykket. Websitet blev skabt med det formål at fremvise de tendenser og designelementer, der gjorde stilarten så kendt, den dag i dag.<br><br>
 
-                <div class="text">
-                    <h2>02.04.02 Responsive site</h2>
-                    <p>Under forløbet/temaet grundlæggende web blev vi introduceret til html og css, samt forskellige stilarter og hvordan vi kunne arbejde med dem.
-                        Ved dette tema arbejdede jeg med stilarten “American Magazine” og skulle udfra research på denne stilart udarbejde et moodboard.
-                        Dette skulle jeg bruge til, at skabe et stilart-site, hvor jeg viste stilartens tendenser og designelementer.
-                        Ved opgaven blev der vedlagt wireframes og layoutdiagrammer, som vi skulle udarbejde vores site udfra. Denne metode, har hjulpet mig meget fremadrettet, og har givet et større overblik over hvordan jeg skulle opsætte diverse html’ers parent og child, så det vil ligge sig som ønsket.
-                        Inden vi begyndte, at kode, lavede vi alle et mockup af både mobil- og web version af vores site i Adobe XD, så vi havde et billede af hvordan det endelige site ville se ud. Dette mockup lavede vi udfra udleverede wireframe. </p> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Besøg site v. 2</a> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Besøg site</a><br>
-                </div>
+                    Jeg benyttede to skrifttyper til sitet; Vogue Regular og Playfair Display. Disse to skrifttyper valgte jeg, da de begge har forskelligt spil i sig, og repræsenterede det klassiske og stilrene “American Magazine” udtryk. Opgaven bestod bl.a. i at arbejde udfra wireframes og layoutdiagrammer, som vi skulle bruge som metodisk redskab til at udarbejde vores site ud fra. <br>Denne metodiske tilgang har hjulpet mig meget i mit arbejde siden hen, da det hjælper med til at give et bedre overblik over, hvordan opsættelsen af diverse HMTL’ers’ parent og child skulle fremstilles, så det fremstår, som ønsket.
+                </p>
+                <div class="button"> <a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2/index.html">Gå til American magazine</a></div>
+
+
             </div>
+            <div class="text">
+                <p>Inden vi begyndte selve kodningsprocessen, fremstilledes et mock-up af både mobil- og web version af vores site i Adobe XD, så vi havde et defineret billede af, hvordan det endelige site skulle se ud. Dette mock-up konstruerede vi ud fra udleverede wireframe og et layoutdiagram. <br><br>
+
+                    Til selve kodningen af sitet, benyttede jeg Flexbox, da jeg ønskede, at mit site skulle være responsiv og dertil tilpassede sig forskellige skærmformater såsom web og mobil, ligesom det gjorde det nemmere at placere de forskellige elementer på den position, jeg ønskede. Herudover har jeg brugt media querys til forskellige skærmstørrelser med henblik på at gøre siden yderligere responsiv til diverse sider. Menuen på min originale side valgte jeg, at lave en fixed position menu, som derved forbliver i toppen af siden og samtidig følger med brugerens scroll i gennem sitet. Henimod slutningen af processen med sitet, valgte jeg, lege lidt med menu funktionen og kodede mig frem til en ‘burger’/dropdown menu. Det færdige produkt kan ses herunder.
+                </p>
+                <div class="button"><a href="http://josefinececilie.dk/kea/02_web/04_responsive/02_04_02_responsive_site_v2_kopi/index.html">Se version to af American magazine</a></div>
+            </div>
+
+            <div class="text">
+
+                <img src="billeder/img_web/Moodboard.jpg" alt="moodboard american magazine">
+            </div>
+
         </div>
 
+        <div class="parallax_2">
+
+        </div>
+
+
+
+
+
     </section>
-    <script src=""></script>
+
+    <script src="script.js"></script>
+    <footer>
+        <div class="col">
+            <p>Josefine Cecilie Larsen
+                <br>Mail: josefinececilie90@gmail.com
+                <br> Kea-mail: jose4400@stud.kea.dk
+                <br>Tlf: 5377 2523
+            </p>
+        </div>
+
+        <div class="col">
+            <a href="https://josefinececilie.carbonmade.com/"><img src="billeder/1Logo.jpg" alt="josefine cecilie logo"> </a>
+            <a href="https://www.facebook.com/josefine.cecilie.77"> <img src="billeder/face.svg" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/josefinececilie/"> <img src="billeder/insta.svg" alt="instagram logo"></a>
+
+        </div>
+
+
+    </footer>
 </body>
+
 
 </html>
