--- a/cv.html
+++ b/cv.html
@@ -6,19 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
+
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
     <header class="header">
         <nav>
-
-            <a href="index.html#logo" class="logo">
-            </a>
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -28,9 +48,102 @@
         </nav>
 
     </header>
+    <br><br>
+    <h1>CV</h1>
+    <hr id="hr" class="hide"><br id="br1"><br id="br2">
 
 
-    <script src=""></script>
+    <section id="cv">
+        <img src="billeder/5.svg" alt="cv billede">
+        <!--
+        <div class="wrap">
+            <img src="http://image.flaticon.com/icons/svg/3/3907.svg" id="arrow" class="animated bounce" alt="pil">
+        </div>
+-->
+        <div class="col_top">
+            <h2>CV</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+                <p>Uddannelse</p>
+                <ul>
+                    <li>2019 HF, HF center Efterslægten, København</li>
+                    <li>2015 Professionel makeup artist, Art of Style and Makeup, København </li>
+                    <li>2010 Mediegymnasiet, Malmö, Sverige</li>
+                </ul>
+                <p>Erhvervserfaring</p>
+                <ul>
+                    <li>2019 Transkribering, Magic Hour Films, Charlottenlund</li>
+                    <li>2017 Transkribering, Socialforvaltningen Københavns kommune</li>
+                    <li>2016-2017 Beauty Adviser for Urban Decay, Magasin Du Nord, København</li>
+                    <li>2015-2018 Freelance Makeup artist, København</li>
+                    <li>2015 - 2018 PA for forfatter og tegner Jakob Martin Strid, Tales from the Future, København </li>
+                    <li>2014 - 2015 Administrativ medarbejder, Fontana Skolen, København</li>
+                    <li>2009 Supplerende koncert fotograf, Templet Lyngby, Lyngby</li>
+                </ul>
+
+
+            </div>
+            <div class="text">
+                <img src="billeder/profile.png" alt="josefine">
+            </div>
+        </div>
+        <div class="parallax_9"></div>
+
+
+        <div class="col_top">
+            <h2>Eksempler på tidligere arbejde</h2>
+
+        </div>
+
+
+
+        <div class="parallax_10">
+
+        </div>
+        <div class="parallax_11">
+
+        </div>
+        <div class="col_top">
+            <h2>Privat</h2>
+            <hr>
+        </div>
+        <div class="col_2">
+            <div class="text_2">
+                <p>Jeg hedder Josefine og er 29 gammel. Jeg bor til daglig på Nørrebro med min kæreste, Kristoffer, og vores plastik stork, Jens Ole. Jeg er uddannet som makeup artist siden 2015 og har arbejdet med det i flere år, men måtte henad vejen erkende, at jeg følte et behov for at arbejde mere teknisk, og samtidig udfordre mig selv kreativt på denne front.
+                </p>
+            </div>
+        </div>
+
+        <div class="parallax_12">
+
+        </div>
+        <div class="parallax_13">
+
+        </div>
+        <div class="parallax_14">
+
+        </div>
+    </section>
+
+
+
+    <script src="script.js"></script>
+    <footer>
+        <div class="col">
+            <p>Josefine Cecilie Larsen
+                <br>Mail: josefinececilie90@gmail.com
+                <br> Kea-mail: jose4400@stud.kea.dk
+                <br>Tlf: 5377 2523
+            </p>
+        </div>
+
+        <div class="col">
+            <a href="https://josefinececilie.carbonmade.com/"><img src="billeder/1Logo.jpg" alt="josefine cecilie logo"> </a>
+            <a href="https://www.facebook.com/josefine.cecilie.77"> <img src="billeder/face.svg" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/josefinececilie/"> <img src="billeder/insta.svg" alt="instagram logo"></a> </div>
+    </footer>
 </body>
 
 </html>
