--- a/ux.html
+++ b/ux.html
@@ -6,22 +6,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tema 2/Web</title>
     <link rel="stylesheet" href="style.css">
+    <meta name="robots" content="noindex">
+
+    <link href="https://fonts.googleapis.com/css?family=Metal+Mania&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
+
+    <link rel="apple-touch-icon" sizes="57x57" href="favicon.ico/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="favicon.ico/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="favicon.ico/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="favicon.ico/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="favicon.ico/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="favicon.ico/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="favicon.ico/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="favicon.ico/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon.ico/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="favicon.ico/android-icon-192x192.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="favicon.ico/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico/favicon-16x16.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+    <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
-
     <header class="header">
         <nav>
-
-            <a href="index.html#logo" class="logo">
-
-            </a>
-
             <input class="menu-btn" type="checkbox" id="menu-btn" />
             <label class="menu-icon" for="menu-btn"><span class="nav-icon"></span></label>
             <ul class="menu">
 
-                <li> <a href="index.html" class="logo1">FORSIDE</a></li>
+                <li> <a href="index.html" class="logo1"><img src="billeder/1Logo.jpg" alt="logo"></a></li>
                 <li><a href="web.html">WEB</a></li>
                 <li><a href="ux.html">UX</a></li>
                 <li> <a href="ani.html">ANIMATION</a></li>
@@ -31,38 +48,93 @@
         </nav>
 
     </header>
+    <br><br>
+    <h1>UX</h1>
+    <hr id="hr" class="hide">
+    <br id="br1"><br id="br2">
 
-    <h1>Grundlæggende UX</h1>
+
+
     <section id="ux_1">
+        <img src="billeder/SVG/2.svg" alt="ux billede">
 
-        <div class="sectionwrapper">
-            <div class="col">
-                <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/"><img src="billeder/ux_1.svg" alt="ux iphone"></a> </div>
-            <div class="col">
-                <h2>Prototype "Beat Mugs"</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
 
-                <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/">Prototype</a>
+        <div class="parallax_3">
 
+        </div>
+        <div class="col_top">
+            <h2>03.03.01 Prototype "Beat Mugs"</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+
+                <p>Under temaet Grundlæggende UX fik vi til opgave at skabe en prototype til en webshop, der solgte enten kopper, lp’er eller frugt. Jeg valgte at skabe en prototype webshop, der solgte kopper og markedsførte sig i retning af DJ’s og generelt musikinteresserede folk.
+                </p>
+
+                <div class="button"> <a href="https://xd.adobe.com/view/0b421a49-935b-4f98-4cfa-8840f0fc174d-7d73/">Beat mugs prototype</a></div>
+            </div>
+            <div class="text">
+                <p>Som start på opgaven, researchede jeg diverse webshops - både hvad angik sites, der solgte kopper eller andet nichepræget - for at få en bedre forståelse for, hvordan man skaber et overskueligt købs-flow og et lækkert univers for brugeren. Igennem prototypens design satte jeg fokus på målgruppen, både i forhold til microcopy, UI-konventioner og selve flowet på siden, med henblik på at gøre brugeroplevelsen så overskuelig og simpel for den potentielle kunde. Jeg skabte et prototype website i hvide, sorte og grå nuancer med henblik på at skabe et stilrent site, der passer ind i et univers, der taler til unge musik interesserede mennesker, og samtidig også skabte en sammenhæng mellem selve kopperne (produktet) og prototypens design elementer. I tilblivelsesprocessen af denne prototype blev der lavet ‘tænke højt’ test, hvor det blev foreslået, at lave et element, hvor man ved ‘Thank you for your purchase’ beskeden efter en købssituation fik brugeren tilbage til startsiden, og derved skabte en brødkrumme-sti hele vejen igennem, hvilket blev implementeret efter testen.</p>
+            </div>
+            <div class="text">
+                <img src="billeder/img_ux/beat.png" alt="kopper">
             </div>
         </div>
-    </section>
-    <section id="ux_2">
-        <div class="sectionwrapper">
-            <div class="col">
-                <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/"><img src="billeder/ux_2.svg" alt="ux iphone"></a> </div>
-            <div class="col">
-                <h2>Designsprint "Kea social"</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias libero tempora eos possimus quam illum, accusantium reiciendis iusto. Suscipit, hic magni, ducimus minima eaque facere voluptates quam repudiandae sit nobis.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sint aliquam saepe delectus harum placeat, iusto similique! Voluptate laboriosam expedita mollitia illum ipsum modi, doloremque cupiditate at dicta ratione soluta provident.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi, eaque eius nesciunt ad facere laboriosam sit nobis culpa qui tempore, ipsum et rerum earum consequatur dolore, odit atque, minus vitae.Lorem ipsum dolor sit amet, consectetur adipisicing elit. Distinctio reprehenderit, dicta similique nesciunt ipsa at nulla voluptas laudantium tempora ut est vitae dolore illum alias quas laborum adipisci tempore optio!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Magni iste saepe est ratione, modi placeat itaque at doloribus, quasi optio tenetur voluptatibus dolores soluta, fugiat officia nihil odio veniam quibusdam!</p>
 
-                <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/">Design sprint prototype</a><br>
-                <a href="designsprint_gruppe9.pdf">Design sprint dokumentation</a>
+        <div class="parallax_4">
 
-
-            </div>
         </div>
+        <div class="col_top">
+            <h2>03.04.01 Design sprint "Kea social"</h2>
+            <hr>
+        </div>
+        <div class="col">
+            <div class="text">
+                <p>Vi skulle i vores anden opgave under temaet Grundlæggende UX, udvikle en app med formålsbeskrivelsen, at det skulle afhjælpe et mangelfuldt område af KEA.<br>
+                    Efter en brainstorming proces, fandt vi kollektivt frem til, at et af de tydeligste mangler hos KEA er en app med platform, der kunne samle forskellige aspekter af KEA oplevelsen ét sted, såsom f. eks diverse events, skemaer, eksamensdage osv. Én app, hvor man let kunne navigere rundt, da mange mente disse informationer var spredt udover mange forskellige informationskilder og steder såsom KEAs hjemmeside, diverse Facebook-sider og/eller grupper.</p>
+            </div>
+            <div class="text">
+
+                <p>Idéen var derfor at udvikle app’en KEA Social, der ville være en app, som kun KEA studerende havde adgang til. Via app’en ville man kunne kommunikere med andre studerende, finde overblik over faglige og sociale events samt finde opslag omkring relevante emner. Vi ønskede at skabe et nemt overblik og en let overskuelig app, så det var simpelt for studerende, at navigere mellem diverse events, samt få hjælp fra andre studerende til enten lektiehjælp eller sågar bare kommunikation om, at tage til fredagsbar med i deres ellers travle hverdag på studiet. </p>
+                <div class="button"> <a href="https://xd.adobe.com/view/7d1546e7-6851-49f2-4fe1-13b5e6428969-0b24/">Kea social prototype</a><br></div>
+            </div>
+            <div class="text">
+                <p>App’en skulle være designet omkring, at man kunne lave en profil, hvor man kunne skrive/krydse sine kompetencer og interesser af, så det blev lettere for folk at socialisere, samt søge den hjælp de ønskede til diverse opgaver og dertil nemmere for app’en at informere om emnerelevante aktiviteter i skolens netværk. Da vi så det som et produkt af KEA, holdt vi app’ens farveskema indenfor KEAs brand farveskema, så det derudover også fungerede som - og føltes som - en direkte forlængelse af KEA’s overordnede site og identitet. Vi benyttede runde og bløde former igennem hele app’en med henblik på at skabe et roligt indtryk for brugeren samt gøre den mere sjov og kreativ i sit feel. </p>
+                <div class="button"> <a href="designsprint_gruppe9.pdf">Design sprint</a></div>
+            </div>
+
+
+
+
+
+
+
+        </div>
+
     </section>
-    <script src=""></script>
+
+
+    <script src="script.js"></script>
+    <footer>
+        <div class="col">
+            <p>Josefine Cecilie Larsen
+                <br>Mail: josefinececilie90@gmail.com
+                <br> Kea-mail: jose4400@stud.kea.dk
+                <br>Tlf: 5377 2523
+            </p>
+        </div>
+
+        <div class="col">
+            <a href="https://josefinececilie.carbonmade.com/"><img src="billeder/1Logo.jpg" alt="josefine cecilie logo"> </a>
+            <a href="https://www.facebook.com/josefine.cecilie.77"> <img src="billeder/face.svg" alt="facebook logo"></a>
+            <a href="https://www.instagram.com/josefinececilie/"> <img src="billeder/insta.svg" alt="instagram logo"></a>
+
+        </div>
+
+
+    </footer>
 </body>
+
 
 </html>
